<resources>
    <string name="app_name">Spare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="spare">Spare</string>
    <string name="spend_save_with_spare"><![CDATA[Spend & Save With Spare]]></string>
    <string name="with_spare_you_can_for_bills_food_entertainment_utilities_and_still_save">With spare, you can for bills, food, entertainment, utilities and still save</string>
    <string name="get_started">Get started</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hope_you_are_doing_great">Hope you are doing great?</string>
    <string name="first_name">First name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="wallet">Wallet</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="add_money">Add money</string>
    <string name="withdraw">Withdraw</string>
    <string name="more">More..</string>
    <string name="my_analysis">My Analysis</string>
    <string name="week">Week</string>
    <string name="spare_balance">spare balance</string>
    <string name="_5_760_19">$ 5,760.19</string>
    <string name="select">Select</string>
    <string name="your_spare_cards">Your spare cards</string>
    <string name="pay_for_bills_services"><![CDATA[Pay for bills & services]]></string>
    <string name="request_a_payment">Request a payment</string>
    <string name="pay_to_another_spare_user">Pay to another spare user</string>
    <string name="recent_recipients">Recent Recipients</string>
    <string name="new_receipient">New Receipient</string>
    <string name="search_by_name">Search by name</string>
    <string name="profile_image">profile image</string>
    <string name="_0000">$ 0000</string>
    <string name="credit_last_digit">...0000</string>
    <string name="spare_balance_camel_case">Spare Balance</string>
    <string name="zero_balance">$ 00000.00</string>
    <string name="send">Send</string>
    <string name="empty_inbox_msg">Your inbox is empty. Start sending messages to your fellow spare friends.</string>
    <string name="no_new_messages">No new messages</string>
    <string name="edit_image">edit image</string>
    <string name="acc_info">Account Info</string>
    <string name="acc_verification">Account Verification</string>
    <string name="invite">Invite Friends</string>
    <string name="bank"><![CDATA[Bank & Cards]]></string>
    <string name="privacy"><![CDATA[Privacy & Security]]></string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="logout">Sign Out</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="send_more">Send More</string>
    <string name="debit_cc">Debit or credit card</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="about_us">About us</string>
    <string name="add_card_msg"><![CDATA[Send money or pay bills & services with ease.]]></string>
    <string name="add_card">Add Card</string>
    <string name="link_a_debit_or_credit_card">Link a debit or credit card</string>
    <string name="card_number">Card number</string>
    <string name="_06_24">06/24</string>
    <string name="save_card_for_future">Save card for future</string>
    <string name="add_more_money">Add More Money</string>
    <string name="text_name">Text Name</string>
    <string name="how_much_would_you_like_to_add_nfrom_your_card">How much would you like to add \nfrom your card?</string>
    <string name="xxxx_xxxx_xxxx_0251">xxxx-xxxx-xxxx-0251</string>
</resources>