<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auths.LoginFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hope_you_are_doing_great"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailL"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        app:boxStrokeWidth="2dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:startIconDrawable="@drawable/baseline_person_outline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emailL"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:strokeWidth="1dp"
        app:strokeColor="@color/md_theme_light_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />
</androidx.constraintlayout.widget.ConstraintLayout>