<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auths.RegistrationFragment">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_an_account"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableTopCompat="@mipmap/ic_spare_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:startIconDrawable="@drawable/baseline_person_outline">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNameL"
        app:startIconDrawable="@drawable/baseline_person_outline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="@string/last_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lastNameL"
        app:startIconDrawable="@drawable/outline_phone_24">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumL"
        app:startIconDrawable="@drawable/outline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emailL"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_onPrimary"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueWithGoogle"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ico_google"
        app:iconGravity="textStart"
        android:text="@string/continue_with_google"
        app:iconTint="@null"
        android:textAllCaps="false"
        app:strokeWidth="1dp"
        app:strokeColor="@color/md_theme_light_primary"
        android:textSize="16sp"
        app:iconSize="25dp"
        app:iconPadding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/register"
        app:layout_constraintStart_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/alreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/continueWithGoogle"
        app:layout_constraintStart_toStartOf="@+id/continueWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/continueWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>