<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="130dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_card">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/spare_balance"
                android:textColor="@color/md_theme_light_onPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_5_760_19"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/add_money"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/ico_text_bg"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:drawableStartCompat="@drawable/baseline_add_24"
        app:drawableTint="@color/md_theme_light_primary" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/withdraw"
        android:background="@drawable/ico_text_bg"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableTint="@color/md_theme_light_primary"
        app:drawableStartCompat="@drawable/baseline_arrow_downward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/ico_text_bg"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:drawableTint="@color/md_theme_light_primary"
        app:drawableStartCompat="@drawable/baseline_menu_24"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ico_auto_com_bg"
                android:hint="@string/week"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="#407AFF"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_analysis"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bankTransactionChart"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bankTransactionChart"
                tools:itemCount="10"
                tools:listitem="@layout/home_transaction_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>