<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pay2AnotherUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/pay_to_another_spare_user"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableTint="@color/md_theme_light_primary"
            app:drawableStartCompat="@drawable/ico_payment" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/pay2AnotherUser" />

        <TextView
            android:id="@+id/requestPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_a_payment"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:drawableStartCompat="@drawable/baseline_note_add_24"
            app:drawableTint="@color/md_theme_light_primary" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/requestPayment"
            tools:layout_editor_absoluteX="2dp" />

        <TextView
            android:id="@+id/payBills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pay_for_bills_services"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:drawableTint="@color/md_theme_light_primary"
            app:drawableStartCompat="@drawable/round_payment_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
