<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".ui.send.SendFragment">
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/recent_recipients"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:itemCount="1"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/recent_recipient_list" />

    <EditText
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@null"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/ico_search"
        android:drawablePadding="10dp"
        android:hint="@string/search_by_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:itemCount="5"
        tools:layout_editor_absoluteX="1dp"
        tools:listitem="@layout/send_recipient_list" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/ExtendedFloatingActionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/new_receipient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>